@@ -90,6 +90,7 @@ v 8.11.5 (unreleased)
   - Fix member expiration date picker after update
   - Fix suggested colors options for new labels in the admin area. !6138
   - Fix GitLab import button
+  - Remove gitorious from import_sources
 
 v 8.11.4
   - Fix resolving conflicts on forks. !6082
